--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>ITIS 3135 page</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is a simple GitHub Pages website.</p>
-    <a href="itis3135/">ITIS3135 Page</a>
+    <h1>Austin Lee Amicable LLama</h1>
+    <p>This is my ITIS 3135 page.</p>
+    <a href="../index.html">Go Back to Home</a>
 </body>
 </html>
