--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>This is a simple GitHub Pages website.</p>
-    <a href="itis3135/">ITIS3135 Page</a>
+    <a href="https://alee182.github.io/itis3135/">ITIS3135 Page</a>
 </body>
 </html>
