--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,7 +4,7 @@
    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Lee's Amicable Llama ||ITIS 3135 ||</title>
+    <title>Austin Lee's Amicable Llama ||ITIS 3135 || Introduction</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/default.css">
 </head>
@@ -21,9 +21,19 @@
         </nav>
     </header>  
     <main>
-        <h2>ITIS 3135 Home</h2>
-        <p>This is all the content for my 3135 class</p>
-
+        <h2>Introduction</h2>
+        <img src="itis3135\images\austinlee.png" alt="picture of me" width="500" height="600" />
+        <p><b>Personal background:</b>  I am from Apex North Carolina and moved to Charlotte 3 years ago.. I like video games, rock tumbling,backpacking, and sewing.</p>
+        <p><b>Academic background:</b> I did dual enrollment Throughout high school and started Computer science here at UNCC with a concentration in Software Engineering and Minor in Mathematics</p>
+        <p><b>Background in this subject:</b> I have been doing research with the university on LLM and coding however I don’t have any experience with HTML or CSS</p>
+        <p><b>Primary Computer Platform:</b>  PC on personal Desktop</p>
+        <p><b>Courses I'm Taking & Why:</b></p>
+        <p><b>ITIS 3135 Web-Based Application Design and Development</b> - I’m taking this class to understand the basics of web development so I can utilize them with future projects</p>
+        <p><b>ITSC 4990 Undergraduate Research</b> -  I’m taking this course to enhance my knowledge of LLMs and attempt to publish a paper</p>
+        <p><b>ITSC 3155 Software Engineering</b> - This course will help me understand the basics of SWE which is what I want to pursue as a career</p>
+        <p><b>ITSC 2181 Intro To Computer Systems-</b> this course is required for all computer science students however it is important is it teaches me C and Assembly</p>
+        <p><b>Funny/Interesting item about yourself:</b> I really really enjoy broccoli cheddar soup</p>
+        <p><b>I'd also like to share:</b> I’m prone to occasionally hitchhike.</p>
     </main>
     <footer>
         <nav>
