--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <title>Austin Lee's ITIS3135 Homepage</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is a simple GitHub Pages website.</p>
-    <a href="https://alee182.github.io/itis3135/">ITIS3135 Page</a>
+    <header>
+    <h1>Austin Lee's homepage</h1>
+    <p>Take a look around</p>
+    </header>
+    <main>
+        <nav>
+            <ul>
+                <li><a href="/itis3135">itis3135 page</a></li>
+            </ul>
+        </nav>
+    </main>
+    <footer>
+        <nav href="https://www.linkedin.com/in/austinlee524/">Linkedin</nav>
+    </footer>
 </body>
 </html>
