--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -4,7 +4,7 @@
    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Austin Lee's Amicable Llama ||ITIS 3135 ||</title>
+    <title>Austin Lee's Amicable Llama ||ITIS 3135 || Homepage</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/default.css">
 </head>
@@ -34,7 +34,7 @@
         <a href="https://www.freecodecamp.org/alee171">FreeCodeCamp</a> ||
         <a href="https://www.codecademy.com/profiles/alee171">CodeAcademy</a> ||
         <a href="https://www.linkedin.com/in/austinlee524/">LinkedIn</a> ||
-        <p>Designed By Austin Lee Designs.co</p>
+        <p>Page Built By: Austin Lee Designs.co</p>
         </nav>
         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
