--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p><p>Sit back and stay a while</p></p>
         <nav>
             <div class="colorclass"><ul>
-                <li><a href="/alee171/itis3135">itis3135 page</a></li> 
+                <li><a href="itis3135/">itis3135 page</a></li> 
                 <li><a href="https://www.linkedin.com/in/austinlee524/">Linkedin</a></li> 
                 <li><a href="https://github.com/alee182">My Github.io</a></li> 
             </ul></div>
