--- a/AmicableLlama/index.html
+++ b/AmicableLlama/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 <h1>Amicable Llama Pajamas Homepage</h1>
-<a href="/about.html">About</a>
+<a href="about.html">About</a>
 
 </header>
     
