--- a/AmicableLlama/index.html
+++ b/AmicableLlama/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
 <h1>Amicable Llama Pajamas Homepage</h1>
+<p><i>Even your mama wears our pajamas!</i></p>
 <a href="about.html">About</a>
 
 </header>
