Whimisical company made/design company

--- a/AmicableLlama/about.html
+++ b/AmicableLlama/about.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amicable Llama Pajamas About</title>
+    <link rel="stylesheet" href="/itis3135/styles/whimsicalstyle.css">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <h1>Amicable Llama Pajamas</h1>
         <p><i>Even your mama wears our pajamas!</i></p>
+        <nav>
+            <a href="./">Home</a>
+            <a href="about.html">About</a>
+            <a href="products.html">Products</a>
+            </nav>
         <h2>About Us</h2>
+
 
     </header>
     <main>
