--- a/itis3135/leedesignsunlimited.com/index.html
+++ b/itis3135/leedesignsunlimited.com/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lee Designs Unlimited HomePage</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="itis3135/styles/profdesign.css">
 
 </head>
 <body>
@@ -14,7 +15,7 @@
     <ul style="list-style-type: disc;">
         <li>Lee Designs Unlimited has been a Family Run Business Since 1926!</li>
         <li>Lee Designs has created over 200 websites for our customers</li>
-        <li>Our </li>
+        <li>12% of our sales get donated to the Red Cross</li>
         <li>Lee Designs developed the webpage for Amazon.com</li>
         <li></li>
     </ul>
