--- a/itis3135/leedesignsunlimited.com/index.html
+++ b/itis3135/leedesignsunlimited.com/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lee Designs Unlimited HomePage</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="itis3135/styles/profdesign.css">
+    <link rel="stylesheet" href="profdesign.css">
 
 </head>
 <body>
@@ -17,7 +17,12 @@
         <li>Lee Designs has created over 200 websites for our customers</li>
         <li>12% of our sales get donated to the Red Cross</li>
         <li>Lee Designs developed the webpage for Amazon.com</li>
-        <li></li>
+        <li>Our Company has saved over 100 people from poor design</li>
     </ul>
+    <p> Our goal at Lee Designs unlimited is to provide the best service money 
+        can buy to our clients in creating professional webpages. We've been 
+        handcrafting sites for over 70 years with design techniques being passed down
+        for generations.
+    </p>
 </body>
 </html>
