--- a/itis3135/amicablellama/index.html
+++ b/itis3135/amicablellama/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amicable LLama Pajamas</title>
-    <link rel="stylesheet" href="itis3135/styles/whimsicalstyle.css">
+    <link rel="stylesheet" href="whimsicalstyle.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -21,7 +21,7 @@
 <main>
     <p><b>Our latest Pajamas!</b></p>
     <div class="pajama-type">
-        <img src="https://th.bing.com/th/id/OIP.lG19D-UxlyMKJqIGSfaREAHaHa?w=202&h=202&c=7&r=0&o=5&dpr=1.5&pid=1.7">
+        <img src="https://th.bing.com/th/id/OIP.lG19D-UxlyMKJqIGSfaREAHaHa?w=202&h=202&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt ="panda pajamas">
         <p>Panda Pajamas</p>
     </div>
 </main>
