changes to itis3135 page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ html, body {
 }
 
         body {
-            background-image: url('itis3135/images/IMG_0145.jpg');;
+            background-image: url('itis3135/images/img145.jpg');
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #FFFFFF;
             background-size: cover; 
