--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -12,11 +12,11 @@
     <header>
         <h1>Austin Lee's Amicable LLama || ITIS 3135</h1>
         <nav>
-            <ul>
-                <li><a href="./">Home</a></li>
-                <li><a href="introduction.html">Introduction</a></li>
-                <li><a href="contract.html">Contract</a></li>
-            </ul>
+            
+                <a href="./">Home</a>
+                <a href="introduction.html">Introduction</a>
+                <a href="contract.html">Contract</a>
+            
 
         </nav>
     </header>  
