lee designs unlimited updated

--- a/itis3135/leedesignsunlimited.com/index.html
+++ b/itis3135/leedesignsunlimited.com/index.html
@@ -9,7 +9,14 @@
 
 </head>
 <body>
-    <h1>Lee Designs Unlimited Homepage</h1>
+    <header>
+    <div class="logo">
+    <h1>Lee Designs Unlimited</h1>
+    <img src="/itis3135/images/fakelogo.jpg" alt="logo"/>
+    </div>
+    <p><i>Turning your visions to reality</i></p>
+    </header>
+    <main>
     <h2>Home Page</h2>
 
     <ul style="list-style-type: disc;">
@@ -24,5 +31,18 @@
         handcrafting sites for over 70 years with design techniques being passed down
         for generations.
     </p>
+    <div class="contact-info">
+        <h3>Contact Information</h3>
+        <p>lduSupport@leedesigns.com</p>
+        <p>(222)-456-7891</p>
+        <p>675 University BLVD, Charlotte NC 28223</p>
+        
+    </div>
+    </main>
+    <footer>
+        <strong><p>Designing the Future</p>
+        <p>Designed by: Lee Designs Unlimited © 2025</p>
+        </strong>
+    </footer>
 </body>
 </html>
