added components to all itsc3135 + fixed some errors

--- a/itis3135/leedesignsunlimited.com/index.html
+++ b/itis3135/leedesignsunlimited.com/index.html
@@ -19,7 +19,7 @@
     <main>
     <h2>Home Page</h2>
 
-    <ul style="list-style-type: disc;">
+    <ul>
         <li>Lee Designs Unlimited has been a Family Run Business Since 1926!</li>
         <li>Lee Designs has created over 200 websites for our customers</li>
         <li>12% of our sales get donated to the Red Cross</li>
@@ -40,9 +40,9 @@
     </div>
     </main>
     <footer>
-        <strong><p>Designing the Future</p>
-        <p>Designed by: Lee Designs Unlimited © 2025</p>
-        </strong>
+        <p><strong>Designing the Future</strong></p>
+        <p><strong>Designed by: Lee Designs Unlimited © 2025</strong></p>
+        
     </footer>
 </body>
 </html>
