--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -9,17 +9,7 @@
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
-    <header>
-        <h1>Austin Lee's Amicable LLama || ITIS 3135</h1>
-        <nav>
-            <ul>
-                <li><a href="./">Home</a></li>
-                <li><a href="introduction.html">Introduction</a></li>
-                <li><a href="contract.html">Contract</a></li>
-            </ul>
-
-        </nav>
-    </header>  
+    <div data-include="components/header.html"></div> 
     <main>
         <h2>Introduction</h2>
         <img src="/itis3135/images/austinlee.png" alt="picture of me" width="200" height="" >
@@ -35,29 +25,8 @@
         <p><b>Funny/Interesting item about yourself:</b> I really really enjoy broccoli cheddar soup</p>
         <p><b>I'd also like to share:</b> I’m prone to occasionally hitchhike.</p>
     </main>
-    <footer>
-        <nav>
-        <a href="https://webpages.charlotte.edu/alee171">charlotte.edu</a> ||
-        <a href="https://github.com/alee182">Github</a> ||
-        <a href="https://alee182.github.io/">Github.io</a> ||
-        <a href="https://alee182.github.io/itis3135/">itis3135.io</a> ||
-        <a href="https://www.freecodecamp.org/alee171">FreeCodeCamp</a> ||
-        <a href="https://www.codecademy.com/profiles/alee171">CodeAcademy</a> ||
-        <a href="https://www.linkedin.com/in/austinlee524/">LinkedIn</a> ||
-        <p>Designed By Austin Lee Designs.co</p>
-        </nav>
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-           </a>
-           <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-             </a>
-           
-           <script>
-              document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                   document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-           </script>
-           
-    </footer>
+    <div data-include="components/footer.html"></div>
+
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
