website evaluations created

--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -12,7 +12,7 @@
     <div data-include="components/header.html"></div> 
     <main>
         <h2>Introduction</h2>
-        <img src="/itis3135/images/austinlee.png" alt="picture of me" width="200" height="" >
+        <img src="/itis3135/images/austinlee.png" alt="picture of me" width="200" height="100" >
         <p><b>Personal background:</b>  I am from Apex North Carolina and moved to Charlotte 3 years ago.. I like video games, rock tumbling,backpacking, and sewing.</p>
         <p><b>Academic background:</b> I did dual enrollment Throughout high school and started Computer science here at UNCC with a concentration in Software Engineering and Minor in Mathematics</p>
         <p><b>Background in this subject:</b> I have been doing research with the university on LLM and coding however I don’t have any experience with HTML or CSS</p>
