finished crap website

--- a/itis3135/stuff/cR@pp13 w3bSItl.htm
+++ b/itis3135/stuff/cR@pp13 w3bSItl.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A websiTe</title>
-    <link rel="stylesheet" href="crap.css">
+    <link rel="stylesheet" href="crap.css?v=2">
 </head>
 <body>
     <img src="biggie.png"  name="biggie cheese is my favorite guy ever he is so cool"/>
