--- a/itis3135/leedesignsunlimited.com/index.html
+++ b/itis3135/leedesignsunlimited.com/index.html
@@ -12,7 +12,7 @@
     <header>
     <div class="logo">
     <h1>Lee Designs Unlimited</h1>
-    <img src="/itis3135/images/fakelogo.jpg" alt="logo"/>
+    <img src="../itis3135/images/fakelogo.jpg" alt="logo"/>
     </div>
     <p><i>Turning your visions to reality</i></p>
     </header>
