edited images for hobby site

--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" https://file+.vscode-resource.vscode-cdn.net/c%3A/Users/ablee/OneDrive/alee182.github.io/itis3135/hobby/index.html#homecontent="width=device-width, initial-scale=1.0">
     <title>Austin Lee's Running Hobby Site</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="hobby.css">
@@ -23,14 +23,14 @@
           </nav>
     </header>
     <main>
-        <section id="home">
+        <section id="home" class="active">
             <h2>Home</h2>
             <p>Welcome to the World of Running, your ultimate destination for all things running! Whether you're a seasoned marathoner or just lacing up your first pair of running shoes, 
                 our site is packed with tips,and inspiration to help you hit the ground running. Join our community of passionate runner
                 s and discover the joy, challenges, and rewards of this incredible sport!</p>
             <figure>
-                <img  src="images/homepage-running.jpg" alt="guy running"/>
-                <figcaption><i>Somebody going for there morning run!</i></figcaption>
+                <img  id="home-pic" src="images/homepage-running.jpg" alt="guy running"/>
+                <figcaption><i>Somebody going for their morning run!</i></figcaption>
             </figure>
             <p>We hope you enjoy are website and learn a little more about running!</p>
 
@@ -42,7 +42,7 @@
                 my middle school track team and have fell in love with hit ever since competing in high school and running recreationally in college!
             </p>
             <figure>
-                <img  src="images/IMG_1557.jpg" alt="guy running"/>
+                <img id="who-pic" src="images/IMG_1557.jpg" alt="guy running"/>
                 <figcaption><i>Picture of me running the mile in 11th grade</i></figcaption>
             </figure>
             <p>Some of my accomplishments i've achieved while running is a pr of 18:07 in the 5k and 10:54 in the 2 mile.
@@ -55,14 +55,14 @@
                 that are better for running than others. When deciding which seasons of the year are best for outdoor running consider
                 some of the following tips:
             </p>
-            <>
+            <ul>
                 <li>Try avoiding the extreme heat of summer and extreme cold of winter </li>
                 <li>Mild temperatures typically making running easier</li>
                 <li>Spring and Fall typically have the best running weather</li>
                 <li>Running in the summer can be more challenging/slower due to high heat</li>
             </ul>
             <figure>
-                <img  src="images/fall-running.jpg" alt="girl running"/>
+                <img id="seasons-pic" src="images/fall-running.jpg" alt="girl running"/>
                 <figcaption><i>Running in the fall is the best due to good temps!</i></figcaption>
             </figure>
         </section>
@@ -78,7 +78,7 @@
                 <li>In you neighborhood, area around your house with sidewalks!</li>
             </ul>
             <figure>
-                <img  src="images/trail.jpg" alt="girl running"/>
+                <img id="where-pic" src="images/trail.jpg" alt="girl running"/>
                 <figcaption><i>Find a beautiful trail near you to run</i></figcaption>
             </figure>
 
@@ -90,7 +90,7 @@
                 is typically good for running it is important to purchase a good pair of running shoes.
             </p>
             <figure>
-                <img  src="images/running-shoes.jpg" alt="girl running"/>
+                <img id="how-pic" src="images/running-shoes.jpg" alt="girl running"/>
                 <figcaption><i>its important to get a good pair of running shoes</i></figcaption>
             </figure>
             <p>When Getting started it is important to set goals and create a training plan to complete. First set a goal you'd like to achieve
@@ -104,7 +104,7 @@
                 thanks to the release of endorphins. Additionally, regular running can enhance overall energy levels, improve sleep quality, and boost your immune system, 
                 making it a holistic activity for both body and mind.</p>
             <figure>
-                <img  src="images/meditation.jpg" alt="girl meditating"/>
+                <img id="why-pic" src="images/meditation.jpg" alt="girl meditating"/>
                 <figcaption><i>Running is good for the body and mind similar to meditation</i></figcaption>
             </figure>    
 
@@ -114,13 +114,14 @@
         </section>
         <section id="ai">
             <h2>Ai Prompts used</h2>
-            <p>The model I used for text Generation was Deepseek v3. here are all of the prompts I utilized:
+            <p>The model I used for text Generation was Deepseek v3. here are all of the prompts I utilized:</p>
                 <ul>
                     <li>Generate a 3 sentence introduction for a running hobby site</li>
                     <li>Generate a 3 sentence about the health benefits of running and 2 setences of other benefits</li>
+                    <li>I have created a site with html that has been divided by section elements. how can i use css/java script to have only one section appear at each time with a nav bar at the top containing each section</li>
 
                 </ul>
-            </p>
+            
         </section>
        
     </main>
