--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" https://file+.vscode-resource.vscode-cdn.net/c%3A/Users/ablee/OneDrive/alee182.github.io/itis3135/hobby/index.html#homecontent="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin Lee's Running Hobby Site</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="hobby.css">
