--- a/itis3135/hobby/index.html
+++ b/itis3135/hobby/index.html
@@ -62,7 +62,7 @@
                 <li>Running in the summer can be more challenging/slower due to high heat</li>
             </ul>
             <figure>
-                <img id="seasons-pic" src="images/fall-running.jpg" alt="girl running"/>
+                <img id="seasons-pic" src="images/i01_fall-running.jpg" alt="girl running"/>
                 <figcaption><i>Running in the fall is the best due to good temps!</i></figcaption>
             </figure>
         </section>
@@ -78,7 +78,7 @@
                 <li>In you neighborhood, area around your house with sidewalks!</li>
             </ul>
             <figure>
-                <img id="where-pic" src="images/trail.jpg" alt="girl running"/>
+                <img id="where-pic" src="images/i01_trail.jpg" alt="girl running"/>
                 <figcaption><i>Find a beautiful trail near you to run</i></figcaption>
             </figure>
 
