fixed design firm and started tables

--- a/itis3135/leedesignsunlimited.com/index.html
+++ b/itis3135/leedesignsunlimited.com/index.html
@@ -11,13 +11,13 @@
 <body>
     <header>
     <div class="logo">
-    <h1>Lee Designs Unlimited</h1>
+    <h1>ITIS3135 Austin Lee</h1>
     <img src="../itis3135/images/fakelogo.jpg" alt="logo"/>
     </div>
     <p><i>Turning your visions to reality</i></p>
     </header>
     <main>
-    <h2>Home Page</h2>
+    <h2>Lee Designs Unlimited</h2>
 
     <ul>
         <li>Lee Designs Unlimited has been a Family Run Business Since 1926!</li>
