--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -34,8 +34,8 @@
         <h2>Amicable Llama Tables</h2>
         <h3>Tabular Data</h3>
         <ol>
-            <li>John Doe - johnDo3@gmail.com - 5 years</li>
-            <li>Jane Smith - janeS38@yahoo.com - 3 years</li>
+            <li>Austin Lee - alee171@gmail.com - 5 years</li>
+            <li>Tony Hawk - thehawk@yahoo.com - 3 years</li>
             <li>Michael Brown - michaelB@gmail.com - 7 years</li>
             <li>Bob Marley - BMarley@gmail.com - 4 years</li>
             <li>David Wilson - davidWilson@yahoo.com - 6 years</li>
@@ -52,13 +52,13 @@
                 <th>Years at Company</th>
             </tr>
             <tr>
-                <td>John Doe</td>
-                <td>johnDo3@gmail.com</td>
+                <td>Austin Lee</td>
+                <td>alee171@gmail.com</td>
                 <td>5</td>
             </tr>
             <tr>
-                <td>Jane Smith</td>
-                <td>janeS38@yahoo.com</td>
+                <td>Tony Hawk</td>
+                <td>thehawk@yahoo.com</td>
                 <td>3</td>
             </tr>
             <tr>
@@ -105,15 +105,15 @@
                 <th>Salary</th>
             </tr>
             <tr>
-                <td>John Doe</td>
-                <td>johnDo3@gmail.com</td>
+                <td>Austin Lee</td>
+                <td>alee171@gmail.com</td>
                 <td>5</td>
                 <td>Marketing</td>
                 <td> 52,500</td>
             </tr>
             <tr>
-                <td>Jane Smith</td>
-                <td>janeS38@yahoo.com</td>
+                <td>Tony Hawk</td>
+                <td>thehawk@yahoo.com</td>
                 <td>3</td>
                 <td>Marketing</td>
                 <td> 58,00</td>
@@ -165,7 +165,7 @@
                 <td>36</td>
                 <td>496,900</td>
             </tr>
-        </table></figcaption>
+        </table></figure>
     </main>
   
 
