--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div data-include="components/header.html"></div> 
+    <div data-include="components/header.html"></div>
     
     <main>
         <h2>Build Your Own Introduction Page</h2>
@@ -51,8 +51,8 @@
         <div id="output" style="display:none;"></div>
     </main>
 
-    <footer id="footer"><div data-include="components/footer.html"></div>
-    </footer> 
+   <div data-include="components/footer.html"></div>
+    
     <script src="scripts/htmlinclude.min.js"></script>
 </body>
 </html>
