--- a/itis3135/backpackingbuddiescharlotte/index.html
+++ b/itis3135/backpackingbuddiescharlotte/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
   <nav>
-    <a href="#about">About Us</a>
-    <a href="#events">Upcoming Events</a>
-    <a href="#gallery">Photo Gallery</a>
-    <a href="#gear">Gear Spreadsheet</a>
+    <a href="about.html">About Us</a>
+    <a href="upcoming-events.html">Upcoming Events</a>
+    <a href="photo-gallery.html">Photo Gallery</a>
+    <a href="gearspreadsheet.html">Gear Spreadsheet</a>
   </nav>
 
   <div class="hero">
@@ -24,5 +24,8 @@
       </p>
     </div>
   </div>
+  <footer>
+    
+  </footer>
 </body>
 </html>
