--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -17,33 +17,48 @@
 
     <!-- Full-width images with number text -->
     <div class="mySlides">
-      <div class="numbertext">1 / 6</div>
-        <img src="img_woods_wide.jpg" style="width:100%">
+      <div class="numbertext">1 / 9</div>
+        <img src="images/slideshow_images/airpurifier.JPG" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">2 / 6</div>
-        <img src="img_5terre_wide.jpg" style="width:100%">
+      <div class="numbertext">2 / 9</div>
+        <img src="images/slideshow_images/umbrella.JPG" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">3 / 6</div>
-        <img src="img_mountains_wide.jpg" style="width:100%">
+      <div class="numbertext">3 / 9</div>
+        <img src="images/slideshow_images/skateboard.JPG" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">4 / 6</div>
-        <img src="img_lights_wide.jpg" style="width:100%">
+      <div class="numbertext">4 / 9</div>
+        <img src="images/slideshow_images/trashcan.JPG" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">5 / 6</div>
-        <img src="img_nature_wide.jpg" style="width:100%">
+      <div class="numbertext">5 / 9</div>
+        <img src="images/slideshow_images/ice.JPG" style="width:100%">
     </div>
   
     <div class="mySlides">
-      <div class="numbertext">6 / 6</div>
-        <img src="img_snow_wide.jpg" style="width:100%">
+      <div class="numbertext">6 / 9</div>
+        <img src="images/slideshow_images/nuts.JPG" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">7 / 9</div>
+        <img src="images/slideshow_images/light.JPG" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">8 / 9</div>
+        <img src="images/slideshow_images/extensioncord.JPG" style="width:100%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">9 / 9</div>
+        <img src="images/slideshow_images/earphones.JPG" style="width:100%">
     </div>
   
     <!-- Next and previous buttons -->
@@ -58,23 +73,34 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="img_woods.jpg" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
+        <img class="demo cursor" src="images/slideshow_images/airpurifier.JPG" style="width:100%" onclick="currentSlide(1)" alt="Air purifier">
       </div>
       <div class="column">
-        <img class="demo cursor" src="img_5terre.jpg" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
+        <img class="demo cursor" src="images/slideshow_images/umbrella.JPG" style="width:100%" onclick="currentSlide(2)" alt="Umbrella">
       </div>
       <div class="column">
-        <img class="demo cursor" src="img_mountains.jpg" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+        <img class="demo cursor" src="images/slideshow_images/skateboard.JPG" style="width:100%" onclick="currentSlide(3)" alt="Skateboard">
       </div>
       <div class="column">
-        <img class="demo cursor" src="img_lights.jpg" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+        <img class="demo cursor" src="images/slideshow_images/trashcan.JPG" style="width:100%" onclick="currentSlide(4)" alt="Trash can">
       </div>
       <div class="column">
-        <img class="demo cursor" src="img_nature.jpg" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+        <img class="demo cursor" src="images/slideshow_images/ice.JPG" style="width:100%" onclick="currentSlide(5)" alt="Ice">
       </div>
       <div class="column">
-        <img class="demo cursor" src="img_snow.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+        <img class="demo cursor" src="images/slideshow_images/nuts.JPG" style="width:100%" onclick="currentSlide(6)" alt="Nuts">
       </div>
+      <div class="column">
+        <img class="demo cursor" src="images/slideshow_images/light.JPG" style="width:100%" onclick="currentSlide(6)" alt ="Light">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="images/slideshow_images/extensioncord.JPG" style="width:100%" onclick="currentSlide(6)" alt="Extension Cord">
+      </div>
+      <div class="column">
+        <img class="demo cursor" src="images/slideshow_images/earphones.JPG" style="width:100%" onclick="currentSlide(6)" alt="Ear phones">
+      </div>
+
+
     </div>
   </div>
 </main>
