--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -18,47 +18,47 @@
     <!-- Full-width images with number text -->
     <div class="mySlides">
       <div class="numbertext">1 / 9</div>
-        <img src="images/slideshow_images/airpurifier.JPG" style="width:100%">
+        <img src="images/slideshow_images/airpurifier.JPG" style="width:100%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">2 / 9</div>
-        <img src="images/slideshow_images/umbrella.JPG" style="width:100%">
+        <img src="images/slideshow_images/umbrella.JPG" style="width:100%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">3 / 9</div>
-        <img src="images/slideshow_images/skateboard.JPG" style="width:100%">
+        <img src="images/slideshow_images/skateboard.JPG" style="width:100%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">4 / 9</div>
-        <img src="images/slideshow_images/trashcan.JPG" style="width:100%">
+        <img src="images/slideshow_images/trashcan.JPG" style="width:100%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">5 / 9</div>
-        <img src="images/slideshow_images/ice.JPG" style="width:100%">
+        <img src="images/slideshow_images/ice.JPG" style="width:100%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">6 / 9</div>
-        <img src="images/slideshow_images/nuts.JPG" style="width:100%">
+        <img src="images/slideshow_images/nuts.JPG" style="width:100%" alt="Air purifier">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">7 / 9</div>
-        <img src="images/slideshow_images/light.JPG" style="width:100%">
+        <img src="images/slideshow_images/light.JPG" style="width:100%" alt="Air purifier">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">8 / 9</div>
-        <img src="images/slideshow_images/extensioncord.JPG" style="width:100%">
+        <img src="images/slideshow_images/extensioncord.JPG" style="width:100%" alt="Air purifier">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">9 / 9</div>
-        <img src="images/slideshow_images/earphones.JPG" style="width:100%">
+        <img src="images/slideshow_images/earphones.JPG" style="width:100%" alt="Air purifier">
     </div>
   
     <!-- Next and previous buttons -->
