--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -18,47 +18,47 @@
     <!-- Full-width images with number text -->
     <div class="mySlides">
       <div class="numbertext">1 / 9</div>
-        <img src="images/slideshow_images/airpurifier.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/airpurifier.png" style="width:50%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">2 / 9</div>
-        <img src="images/slideshow_images/umbrella.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/umbrella.png" style="width:50%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">3 / 9</div>
-        <img src="images/slideshow_images/skateboard.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/skateboard.png" style="width:50%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">4 / 9</div>
-        <img src="images/slideshow_images/trashcan.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/trashcan.png" style="width:50%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">5 / 9</div>
-        <img src="images/slideshow_images/ice.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/ice.png" style="width:50%" alt="Air purifier">
     </div>
   
     <div class="mySlides">
       <div class="numbertext">6 / 9</div>
-        <img src="images/slideshow_images/nuts.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/nuts.png" style="width:50%" alt="Air purifier">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">7 / 9</div>
-        <img src="images/slideshow_images/light.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/lights.png" style="width:50%" alt="Air purifier">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">8 / 9</div>
-        <img src="images/slideshow_images/extensioncord.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/extensioncord.png" style="width:50%" alt="Air purifier">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">9 / 9</div>
-        <img src="images/slideshow_images/earphones.JPG" style="width:50%" alt="Air purifier">
+        <img src="images/slideshow_images/earphones.png" style="width:50%" alt="Air purifier">
     </div>
   
     <!-- Next and previous buttons -->
@@ -73,31 +73,31 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/airpurifier.JPG" style="width:100%" onclick="currentSlide(1)" alt="Air purifier">
+        <img class="demo cursor" src="images/slideshow_images/airpurifier.png" style="width:100%" onclick="currentSlide(1)" alt="Air purifier">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/umbrella.JPG" style="width:100%" onclick="currentSlide(2)" alt="Umbrella">
+        <img class="demo cursor" src="images/slideshow_images/umbrella.png" style="width:100%" onclick="currentSlide(2)" alt="Umbrella">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/skateboard.JPG" style="width:100%" onclick="currentSlide(3)" alt="Skateboard">
+        <img class="demo cursor" src="images/slideshow_images/skateboard.png" style="width:100%" onclick="currentSlide(3)" alt="Skateboard">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/trashcan.JPG" style="width:100%" onclick="currentSlide(4)" alt="Trash can">
+        <img class="demo cursor" src="images/slideshow_images/trashcan.png" style="width:100%" onclick="currentSlide(4)" alt="Trash can">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/ice.JPG" style="width:100%" onclick="currentSlide(5)" alt="Ice">
+        <img class="demo cursor" src="images/slideshow_images/ice.png" style="width:100%" onclick="currentSlide(5)" alt="Ice">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/nuts.JPG" style="width:100%" onclick="currentSlide(6)" alt="Nuts">
+        <img class="demo cursor" src="images/slideshow_images/nuts.png" style="width:100%" onclick="currentSlide(6)" alt="Nuts">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/light.JPG" style="width:100%" onclick="currentSlide(6)" alt ="Light">
+        <img class="demo cursor" src="images/slideshow_images/lights.png" style="width:100%" onclick="currentSlide(6)" alt ="Light">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/extensioncord.JPG" style="width:100%" onclick="currentSlide(6)" alt="Extension Cord">
+        <img class="demo cursor" src="images/slideshow_images/extensioncord.png" style="width:100%" onclick="currentSlide(6)" alt="Extension Cord">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/earphones.JPG" style="width:100%" onclick="currentSlide(6)" alt="Ear phones">
+        <img class="demo cursor" src="images/slideshow_images/earphones.png" style="width:100%" onclick="currentSlide(6)" alt="Ear phones">
       </div>
 
 
