--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/slideshow.css">
 </head>
 <body>
-<div data-include="components/header.html"></div>
+  <div data-include="components/footer.html"></div> 
     
 <main>
 <!-- Container for the image gallery -->
@@ -73,31 +73,31 @@
     <!-- Thumbnail images -->
     <div class="row">
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/airpurifier.png" style="width:100%" onclick="currentSlide(1)" alt="Air purifier">
+        <img class="demo cursor" src="images/slideshow_images/airpurifier.png" style="width:100%" onclick="currentSlide(1)" alt="A for: Air purifier found in my room">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/umbrella.png" style="width:100%" onclick="currentSlide(2)" alt="Umbrella">
+        <img class="demo cursor" src="images/slideshow_images/umbrella.png" style="width:100%" onclick="currentSlide(2)" alt=" U for: Umbrella ">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/skateboard.png" style="width:100%" onclick="currentSlide(3)" alt="Skateboard">
+        <img class="demo cursor" src="images/slideshow_images/skateboard.png" style="width:100%" onclick="currentSlide(3)" alt=" S for: Skateboard found at the skatepark">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/trashcan.png" style="width:100%" onclick="currentSlide(4)" alt="Trash can">
+        <img class="demo cursor" src="images/slideshow_images/trashcan.png" style="width:100%" onclick="currentSlide(4)" alt=" T for: Trash can found in the bathroom">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/ice.png" style="width:100%" onclick="currentSlide(5)" alt="Ice">
+        <img class="demo cursor" src="images/slideshow_images/ice.png" style="width:100%" onclick="currentSlide(5)" alt=" I for: Ice found in the freezer">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/nuts.png" style="width:100%" onclick="currentSlide(6)" alt="Nuts">
+        <img class="demo cursor" src="images/slideshow_images/nuts.png" style="width:100%" onclick="currentSlide(6)" alt="N for Nuts found in the pantry">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/lights.png" style="width:100%" onclick="currentSlide(6)" alt ="Light">
+        <img class="demo cursor" src="images/slideshow_images/lights.png" style="width:100%" onclick="currentSlide(6)" alt =" L for: Light found on the ceiling">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/extensioncord.png" style="width:100%" onclick="currentSlide(6)" alt="Extension Cord">
+        <img class="demo cursor" src="images/slideshow_images/extensioncord.png" style="width:100%" onclick="currentSlide(6)" alt=" E for: Extension Cord found under the desk">
       </div>
       <div class="column">
-        <img class="demo cursor" src="images/slideshow_images/earphones.png" style="width:100%" onclick="currentSlide(6)" alt="Ear phones">
+        <img class="demo cursor" src="images/slideshow_images/earphones.png" style="width:100%" onclick="currentSlide(6)" alt=" E for: Ear phones found over my ears">
       </div>
 
 
