--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/slideshow.css">
 </head>
 <body>
-  <div data-include="components/footer.html"></div> 
+  <div data-include="components/header.html"></div> 
     
 <main>
 <!-- Container for the image gallery -->
