--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -107,7 +107,7 @@
 
 <div data-include="components/footer.html"></div>
 
-<script src="scripts/htmlinclude.min.js"></script>
+<script src="scripts/HTMLInclude.min.js"></script>
 <script defer src="scripts/slideshow.js"></script>
 </body>
 </html>
