--- a/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
+++ b/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Gear Checklist - Charlotte Backpacking Club</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="backpackstyles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,6 +42,12 @@
 <body>
 
     <div class="container">
+        <nav>
+            <a href="about.html">About Us</a>
+            <a href="upcoming-events.html">Upcoming Events</a>
+            <a href="photo-gallery.html">Photo Gallery</a>
+            <a href="gearspreadsheet.html">Gear Spreadsheet</a>
+          </nav>
         <h1>Backpacking Gear Checklist</h1>
         <!--this is just a placeholder spreadsheet there will be an interactive one added with JS-->
         <table>
