--- a/itis3135/backpackingbuddiescharlotte/upcoming-events.html
+++ b/itis3135/backpackingbuddiescharlotte/upcoming-events.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Upcoming Events</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="backpackstyles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
