--- a/itis3135/backpackingbuddiescharlotte/index.html
+++ b/itis3135/backpackingbuddiescharlotte/index.html
@@ -9,12 +9,7 @@
  
 </head>
 <body>
-  <nav>
-    <a href="about.html">About Us</a>
-    <a href="upcoming-events.html">Upcoming Events</a>
-    <a href="photo-gallery.html">Photo Gallery</a>
-    <a href="gearspreadsheet.html">Gear Spreadsheet</a>
-  </nav>
+  <div data-include="components/header.html"></div>
 
   <div class="hero">
     <div class="hero-content">
@@ -24,8 +19,8 @@
       </p>
     </div>
   </div>
-  <footer>
-    
-  </footer>
+
+  <div data-include="components/footer.html"></div>
+  
 </body>
 </html>
