--- a/itis3135/backpackingbuddiescharlotte/about.html
+++ b/itis3135/backpackingbuddiescharlotte/about.html
@@ -5,39 +5,13 @@
     <title>About Us - Charlotte Backpacking Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="backpackstyles.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f0f8f5;
-        }
-        h1, h2 {
-            color: #2e4d3f;
-        }
-        p {
-            color: #555;
-            line-height: 1.8;
-        }
-        .container {
-            max-width: 900px;
-            margin: auto;
-            background-color: #ffffff;
-            padding: 40px;
-            border-radius: 12px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-    </style>
+    
 </head>
 <body>
 
-    <nav>
-        <a href="about.html">About Us</a>
-        <a href="upcoming-events.html">Upcoming Events</a>
-        <a href="photo-gallery.html">Photo Gallery</a>
-        <a href="gearspreadsheet.html">Gear Spreadsheet</a>
-      </nav>
+  <div data-include="components/header.html"></div>
       
-    <div class="container">
+    <div class="container2">
         <h1>About Us</h1>
 
         <p>Welcome to the <strong>Charlotte Backpacking Club</strong>, a vibrant and welcoming community of outdoor enthusiasts based in the heart of Charlotte, North Carolina, who are united by a shared passion for backpacking, hiking, and experiencing the wonders of the natural world firsthand.</p>
@@ -51,6 +25,7 @@
         <h2>Join Us!</h2>
         <p>No matter if you are a seasoned thru-hiker with thousands of miles under your boots or a beginner taking your very first steps on the trail, the Charlotte Backpacking Club offers a welcoming space for everyone to grow their skills, build lifelong friendships, and contribute to a cause that protects our natural spaces for generations to come; we would love for you to be part of our journey.</p>
     </div>
+    <div data-include="components/footer.html"></div>
 
 </body>
 </html>
