fixed component loading error

--- a/itis3135/backpackingbuddiescharlotte/photo-gallery.html
+++ b/itis3135/backpackingbuddiescharlotte/photo-gallery.html
@@ -11,6 +11,8 @@
 <body>
   <div data-include="components/header.html"></div>
 
+  <!--photo slideshow will be added once I create gallery javascript-->
   <div data-include="components/footer.html"></div>
+  <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
