--- a/itis3135/backpackingbuddiescharlotte/about.html
+++ b/itis3135/backpackingbuddiescharlotte/about.html
@@ -27,5 +27,7 @@
     </div>
     <div data-include="components/footer.html"></div>
 
+    <script src="scripts/HTMLInclude.min.js"></script>
+
 </body>
 </html>
