--- a/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
+++ b/itis3135/backpackingbuddiescharlotte/gearspreadsheet.html
@@ -100,5 +100,7 @@
         </table>
     </div>
     <div data-include="components/footer.html"></div>
+
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
