--- a/itis3135/backpackingbuddiescharlotte/index.html
+++ b/itis3135/backpackingbuddiescharlotte/index.html
@@ -21,6 +21,6 @@
   </div>
 
   <div data-include="components/footer.html"></div>
-  
+  <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
