--- a/itis3135/backpackingbuddiescharlotte/upcoming-events.html
+++ b/itis3135/backpackingbuddiescharlotte/upcoming-events.html
@@ -34,6 +34,7 @@
     </div>
     </main>
     <div data-include="components/footer.html"></div>
+    <script src="scripts/HTMLInclude.min.js"></script>
 
 </body>
 </html>
