--- a/itis3135/backpackingbuddiescharlotte/photo-gallery.html
+++ b/itis3135/backpackingbuddiescharlotte/photo-gallery.html
@@ -13,6 +13,6 @@
 
   <!--photo slideshow will be added once I create gallery javascript-->
   <div data-include="components/footer.html"></div>
-  <script src="scripts/HTMLInclude.min.js"></script>
+  <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
