--- a/itis3135/backpackingbuddiescharlotte/admin.html
+++ b/itis3135/backpackingbuddiescharlotte/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Admin Login</title>
+  <title>Admin Event Manager</title>
 </head>
 <body>
   <h2>Admin Login</h2>
@@ -16,10 +16,18 @@
     <input id="location" placeholder="Location"><br>
     <textarea id="description" placeholder="Description"></textarea><br>
     <button onclick="submitEvent()">Submit Event</button>
+
+    <hr>
+    <h3>Existing Events</h3>
+    <div id="eventList"></div>
   </div>
-  
+
   <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
   <script src="/itis3135/backpackingbuddiescharlotte/scripts/admin.js"></script>
- 
 </body>
 </html>
+
+
+
+  
+ 
