maybe it fixed?

--- a/itis3135/backpackingbuddiescharlotte/admin.html
+++ b/itis3135/backpackingbuddiescharlotte/admin.html
@@ -19,7 +19,7 @@
 
     <hr>
     <h3>Existing Events</h3>
-    <div id="eventList"></div>
+    <div id="eventsContainer"></div>
   </div>
 
   <script src="/itis3135/scripts/HTMLInclude.min.js"></script>
